[package]
name = "mach_ports"
version = "0.3.0-alpha"
edition = "2021"
description = "A library to manage Mach port right references and exchange Mach messages."
repository = "https://github.com/turbocool3r/mach_ports_rs"
documentation = "https://docs.rs/mach_ports"
authors = ["turbocooler <turbocooler@cocaine.ninja>"]
keywords = ["mach", "darwin"]
categories = ["api-bindings", "os::macos-apis"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
mach2 = "0.4.1"
page_size = "0.5"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"